Bunch of map fixes

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js" data-main="js/main"></script>
     <script src="http://localhost:3000/faye/client.js"></script>
+    <script src="http://localhost:3000/js/libs/jscoord-1.1.1js"></script>
 </head>
 <body>
     <div class="page">
